force-app/main/default/objects/Form_Answer__c/Form_Answer__c.object-meta.xml
<CustomObject>
    <description>One row per individual answer of a Form Response. Created automatically by flattening Form_Response__c.Response_Data__c (JSON). Makes every submitted field reportable, groupable and filterable in native Reports.</description>
    <label>Form Answer</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Form Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>