force-app/main/default/objects/Form_Answer__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <description>Machine key of the answered field (JSON key), e.g. "track".</description>
    <label>Field Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>