force-app/main/default/objects/Form_Answer__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <description>Master-Detail to the parent Form Response.</description>
    <label>Form Response</label>
    <referenceTo>Form_Response__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>