force-app/main/default/objects/Form_Answer__c/fields/Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Date__c</fullName>
    <description>Date answer value (for date-based grouping/filtering in reports).</description>
    <label>Value (Date)</label>
    <type>Date</type>
</CustomField>