force-app/main/default/objects/Form_Answer__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <description>Numeric answer value (enables sums and averages in reports).</description>
    <label>Value (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>