force-app/main/default/objects/Form_Answer__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <description>Answer value as text (Text so it can be grouped/filtered in reports). Multi-select values are joined with "; ". Truncated to 255 chars.</description>
    <label>Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>